fixes #1608, misaligned radio buttons
This corrects a visual bug(?) or at least unexpected behavior with inline radio/check elements

--- a/scss/_bootstrap_overrides.scss
+++ b/scss/_bootstrap_overrides.scss
@@ -170,6 +170,7 @@ body > .container {
 
 // Overrides for form elements
 .form-check-input {
+    height: auto !important; // fixes height bug after BS 4.3
     width: auto !important; // fixes bug in latest Chrome + pre-Mojave macs ?
 }
 
